# get_media_duration

./: .gitignore  Pipfile  README.md  TODO.md  ffmpeg_supported_fileformats.txt  framecount.py  get_media_duration.py  get_media_duration.spec  pyproject.toml  test01.py
get_media_duration/: __init__.py
src/get_media_duration/: __init__.py  __main__.py
tests/: test_generic.py  test_get_media_duration.py
