[project]
name = "get_media_duration"
version = "1.2"
requires-python = ">=3.7"
dependencies = [
    "ffmpeg-python",
    "importlib_metadata",
    "timecode",
]

authors = [
    { name = "Sebastian Reategui", email = "seb.reategui@gmail.com" },
]
license = {text = "MIT License"}

classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3.7+",
]

[project.urls]
Homepage = "https://github.com/seb26/get_media_duration"
Repository = "https://github.com/seb26/get_media_duration.git"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]